tests/NormalTests/paczka1/small_fuzzy/78300546.err
Error in line 1: Q5mX S696 41,1
Error in line 3: 6l1MknfgV A124 6,0
Error in line 6: TmsFCleli A417 25,7
Error in line 5: 6l1MknfgV A417 89,5
